--- a/_Front_end_files_/package.json
+++ b/_Front_end_files_/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "cors": "^2.8.5",
     "gulp-babel": "^8.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -19,6 +20,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
