--- a/_Front_end_files_/package.json
+++ b/_Front_end_files_/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "dependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "cors": "^2.8.5",
     "gulp-babel": "^8.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "^3.2.0",
-    "xmlhttprequest": "^1.8.0"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,7 +18,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
