--- a/Front_End/package.json
+++ b/Front_End/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -18,6 +19,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
